--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AstronomyPOD</string>
+    <string name="load_today_picture">Loading today\'s picture</string>
+    <string name="loading">Loading..</string>
+    <string name="loading_media">Loading media</string>
 </resources>
