Updated colors and UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="load_today_picture">Loading today\'s picture</string>
     <string name="loading">Loading..</string>
     <string name="loading_media">Loading media</string>
+    <string name="discover_more">Discover more</string>
 </resources>
