--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="loading">Loading..</string>
     <string name="loading_media">Loading media</string>
     <string name="discover_more">Discover more</string>
+    <string name="error_unable_to_fetch">Failed to fetch data. \nPlease check your network connectivity</string>
 </resources>
