--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="loading_media">Loading media</string>
     <string name="discover_more">Discover more</string>
     <string name="error_unable_to_fetch">Failed to fetch data. \nPlease check your network connectivity</string>
+    <string name="error_unable_to_fetch_apod">Failed to fetch APOD</string>
+    <string name="connection_lost">Connection unavailable</string>
+    <string name="connection_available">Connection available</string>
 </resources>
