--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="error_unable_to_fetch_apod">Failed to fetch APOD</string>
     <string name="connection_lost">Connection unavailable</string>
     <string name="connection_available">Connection available</string>
+    <string name="today_s_picture">Today\'s Picture</string>
 </resources>
