--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="connection_lost">Connection unavailable</string>
     <string name="connection_available">Connection available</string>
     <string name="today_s_picture">Today\'s Picture</string>
+  <string name="date">Date</string>
 </resources>
